added get reisen by user id api
